# re-classify

./: .dockerignore  .gitignore  .goreleaser.yml  CHANGELOG.md  Dockerfile  Justfile  LICENSE  README.md  go.mod  go.sum  jumpstart.sh  main.py  pyproject.toml
.github/workflows/: build-and-test.yml  functest.yml  release.yml
cmd/re-classify/: main.go
docs/: classification-protocol.md  configuration-format.md
functests/: bad-compound-endings-config.yaml  basic-functest.yaml  config.yaml  end-config.yaml  endings-config.yaml  good-compound-endings-config.yaml  simple-config.yaml  test-end-field-config.yaml
functests/configs/: simple-test-config.yaml
internal/classifier/: classifier.go
internal/config/: config.go
scripts/: functest.py
test-configs/: config.yaml  example-config.yaml  test-complex-config.yaml  test-config.yaml
